tests/negative/neg_send_use_after_move.safe
-- Test: neg_send_use_after_move
-- Description: Access-typed channel elements are rejected before send ownership-transfer checks run.
-- Expected: REJECT source_frontend_error

package neg_Send_Use_After_Move

   type payload is record
      value : integer;


   type payload_Ptr is access payload;

   channel Data_Ch : payload_Ptr capacity 1;

   function run
      Source : payload_Ptr = new ((value = 1) as payload);

      send Data_Ch, Source;
      Source.value = 2;



